test/pos/adt_curry.msmt_
; Sorts
(declare-sort Vec 1)

; Constants




; Uninterpreted Functions


; Qualifiers


; Well-formedness Constraints


;  Constraints
(constraint (forall ((foo (Vec Int))) (=> (= (head foo 0) 0) (= (head foo 0) 0))))

