test/neg/adt1.msmt_
; Sorts
(declare-sort Vec 1)

; Constants




; Uninterpreted Functions


; Qualifiers


; Well-formedness Constraints


;  Constraints
(constraint (forall ((l3 (Vec Int))(l1 (Vec Int))(xs (Vec Int))(x Int)) (=> (and (= xs mkNil) (and (= l1 (mkCons x xs)) True)) (is$mkCons l3))))
(constraint (forall ((l3 (Vec Int))(l1 (Vec Int))(xs (Vec Int))(x Int)) (=> (and (= xs mkNil) (and (= l1 (mkCons x xs)) (= l1 l3))) (= x (head l3)))))
(constraint (forall ((l3 (Vec Int))(l1 (Vec Int))(xs (Vec Int))(x Int)) (=> (and (= xs mkNil) (and (= l1 (mkCons x xs)) (= l1 l3))) (= mkNil (tail l3)))))

